# tennis_courts_api

./: .flake8  .pre-commit-config.yaml  Dockerfile  Procfile  pyproject.toml  requirements.txt  vercel.json
app/: app.py  config.py  db_connection.py  main.py  websocket_manager.py
app/db/: config.py
app/models/: available_courts.py  clubs.py  common.py  courts.py  courts_data_status.py  emails.py  matches.py  run_lambda.py  tournaments.py  users.py
app/repositories/: available_courts.py  clubs.py  courts.py  courts_data_status.py  matches.py  run_lambda.py  tournaments.py  users.py
app/routes/: available_courts.py  clubs.py  courts.py  courts_data_status.py  emails.py  matches.py  run_lambda.py  tournaments.py  users.py  websocket.py
app/seed/: consts.py  main.py  tenis4u_available_courts.py  tenis4u_supported_courts.json  utils.py
app/seed/courts_data_fetching_status_table/: courts_data_fetching_status_table.py
app/seed/lambda_status_table/: lambda_status_table.py
app/seed/tenis4u_available_courts_table/: tenis4u_available_courts.py
app/services/: available_courts.py  clubs.py  courts.py  courts_data_status.py  matches.py  run_lambda.py  tournaments.py  users.py
app/templates/contact_email/: contact_email.html
app/templates/email/: email.css  email.html
app/utils/: generate_player_password.py  get_players_passwords.py  hash.py  oauth.py  token.py  utils.py
