[tool.poetry]
name = "tennis_courts_api"
version = "0.1.0"
description = "Tennis Courts Api"
authors = ["Michal Urbanczyk <michaurbanczyk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
requests = "^2.32.3"
pytz = "^2024.2"
motor = "^3.6.0"
websockets = "^14.1"
asgi-lifespan = "^2.1.0"
gunicorn = "^23.0.0"
passlib = "^1.7.4"
cryptography = "^44.0.0"
openpyxl = "^3.1.5"
python-jose = "^3.3.0"
bcrypt = "^4.2.1"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
preview = true
exclude = '''/(
    \.git
    | \.tox
    | \.venv
    | \.svn
    | \.egg
    | \.idea
    | \.vscode
    | build
    | dist
)/'''

[tool.isort]
profile = 'black'
src_paths = ["app"]
